--- a/stack.html
+++ b/stack.html
@@ -127,7 +127,7 @@
                             <td class="px-6 py-4 align-top">Infraestructura & DevOps</td>
                             <td class="px-6 py-4 font-semibold">CI/CD y Control de Versiones</td>
                             <td class="px-6 py-4"><span class="tech-option bg-gray-800 text-white">Git + GitHub Actions</span></td>
-                            <td class="px-6 py-4">Automatización de pruebas, construcción de contenedores y despliegues en la nube.</td>
+                            <td class="px-6 py-4">Construcción de contenedores y despliegues en la nube.</td>
                             <td class="px-6 py-4">Ecosistema integrado y estándar en la industria. Facilita la colaboración y la calidad del código.</td>
                         </tr>
 
