--- a/flujoSeguridad.html
+++ b/flujoSeguridad.html
@@ -112,7 +112,7 @@
                         <h3 class="text-xl font-bold text-gray-800">Paso 4: Estrategia de Caché Selectiva</h3>
                         <p class="text-gray-600">Para maximizar la velocidad sin sacrificar la precisión, es una posibilidad implementar un caché inteligente:</p>
                         <ul class="list-disc list-inside mt-2 text-gray-600 space-y-1">
-                            <li><strong>Datos estáticos</strong> (descripción, imagen) se guardan en caché por más tiempo.</li>
+                            <li><strong>Datos estáticos</strong> (descripción, etc) se guardan en caché por más tiempo.</li>
                             <li><strong>Datos volátiles</strong> (stock, precio) no se cachean o tienen un tiempo de vida muy corto, verificándose en momentos clave como al agregar al carrito.</li>
                         </ul>
                     </div>
