--- a/flujoSeguridad.html
+++ b/flujoSeguridad.html
@@ -147,7 +147,7 @@
                         <i class="fas fa-user-check text-3xl text-green-600"></i>
                     </div>
                     <div>
-                        <h3 class="text-xl font-bold text-gray-800">Flujo Especial: Colocación de Pedido (POST)</h3>
+                        <h3 class="text-xl font-bold text-gray-800">Flujo Especial: Posteo de Pedido (POST)</h3>
                         <p class="text-gray-600">Cuando se realiza una compra, el manejo de datos personales es crucial:</p>
                          <ul class="list-disc list-inside mt-2 text-gray-600 space-y-1">
                             <li><strong>Consentimiento Explícito:</strong> Nuestra app solicita al usuario permiso audible para compartir sus datos de entrega.</li>
