--- a/flujoSeguridad.html
+++ b/flujoSeguridad.html
@@ -92,7 +92,7 @@
                             <li><strong>Verifica la integridad de la app</strong> usando el token de Play Integrity. Si no es válido, la petición se rechaza.</li>
                             <li>Verifica la identidad del usuario de nuestra app (con su propio token de sesión).</li>
                             <li>Prepara la llamada a la API de TATA.</li>
-                            <li class="font-semibold text-red-600">Utiliza las credenciales seguras (API Key o token JWT) que TATA nos proporcionó. Estas credenciales están almacenadas de forma segura en nuestro servidor.</li>
+                            <li class="font-semibold text-red-600">Por ejemplo: credenciales seguras (API Key o token JWT); lo que TATA crea conveniente. Estas credenciales estarían almacenadas de forma segura en nuestro servidor.</li>
                         </ul>
                     </div>
                 </div>
