--- a/flujoSeguridad.html
+++ b/flujoSeguridad.html
@@ -130,7 +130,7 @@
                         <i class="fas fa-store text-3xl text-blue-600"></i>
                     </div>
                     <div>
-                        <h3 class="text-xl font-bold text-gray-800">Paso 5: Petición Segura a la API de TATA</h3>
+                        <h3 class="text-xl font-bold text-gray-800">Paso 5: Petición Segura a la API de TATA (Consulta de productos)</h3>
                         <p class="text-gray-600">Si la información no está en la caché, nuestro backend realiza la llamada a la API de TATA, adjuntando el token de autenticación. La API de TATA valida nuestro token y devuelve los resultados.</p>
                     </div>
                 </div>
