--- a/CostosVersionFinal.html
+++ b/CostosVersionFinal.html
@@ -158,7 +158,7 @@
                 },
                 'netuy1-whisper': {
                     title: 'Netuy Plan 1 + Whisper Autoalojado (IaaS)',
-                    text: 'Estrategia de optimización de costos a largo plazo. Elimina el costo variable de la API de voz. <strong>Consideración Clave:</strong> Requiere una alta inversión en horas de DevOps para desplegar, mantener y entrenar el modelo Whisper, además de gestionar toda la infraestructura (SO, Docker, seguridad). Ofrece soberanía de datos y latencia mínima.'
+                    text: 'Estrategia de optimización de costos a largo plazo. Elimina el costo variable de la API de voz. <strong>Consideración Clave:</strong> Requiere una alta inversión en horas de DevOps para desplegar, mantener y entrenar el modelo Whisper. Gestión de la infraestructura (SO, Docker, seguridad) muy flexible. Ofrece soberanía de datos y latencia mínima.'
                 },
                 'netuy2-whisper': {
                     title: 'Netuy Plan 2 + Whisper Autoalojado (IaaS)',
