--- a/CostosVersionFinal.html
+++ b/CostosVersionFinal.html
@@ -6,6 +6,7 @@
     <title>Calculadora de Costos del Proyecto - Asistente de Voz</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script type="text/javascript">document.oncontextmenu = function(){return false;}</script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
