--- a/stack2.html
+++ b/stack2.html
@@ -134,6 +134,13 @@
                         </tr>
                         <tr class="bg-white border-b hover:bg-gray-50">
                             <td class="px-6 py-4 align-top">Infraestructura & DevOps</td>
+                            <td class="px-6 py-4 font-semibold">Túneles de Desarrollo</td>
+                            <td class="px-6 py-4"><span class="tech-option bg-gray-500 text-white">Ngrok</span></td>
+                            <td class="px-6 py-4">Exponer servicios locales (ej. Rasa, Flask) a internet de forma segura para pruebas de webhooks y demos.</td>
+                            <td class="px-6 py-4">Herramienta estándar para crear túneles seguros de forma rápida, esencial para probar integraciones con servicios externos.</td>
+                        </tr>
+                        <tr class="bg-white border-b hover:bg-gray-50">
+                            <td class="px-6 py-4 align-top">Infraestructura & DevOps</td>
                             <td class="px-6 py-4 font-semibold">Contenerización y Orquestación</td>
                             <td class="px-6 py-4"><span class="tech-option bg-cyan-100 text-cyan-800">Docker & Docker Compose</span></td>
                             <td class="px-6 py-4">Empaquetar todos los servicios (Rasa, Flask, Grafana, etc.) en una imagen unificada para estandarizar los entornos.</td>
@@ -149,9 +156,9 @@
                          <tr class="bg-white border-b hover:bg-gray-50">
                             <td class="px-6 py-4 align-top">Infraestructura & DevOps</td>
                             <td class="px-6 py-4 font-semibold">CI/CD y Control de Versiones</td>
-                            <td class="px-6 py-4"><span class="tech-option bg-gray-800 text-white">Git + GitHub Actions</span></td>
+                            <td class="px-6 py-4"><span class="tech-option bg-gray-800 text-white">Git + GitHub Actions</span><span class="tech-option bg-red-200 text-red-900">Jenkins</span></td>
                             <td class="px-6 py-4">Construcción de contenedores y despliegues automáticos en la nube.</td>
-                            <td class="px-6 py-4">Ecosistema integrado y estándar en la industria. Facilita la colaboración y la calidad del código.</td>
+                            <td class="px-6 py-4"><b>GitHub Actions:</b> Ecosistema integrado. <br><b>Jenkins:</b> Servidor open-source potente para flujos de CI/CD complejos.</td>
                         </tr>
 
                          <!-- Calidad y Seguridad -->
