--- a/stack2.html
+++ b/stack2.html
@@ -66,9 +66,9 @@
                         <tr class="bg-white border-b hover:bg-gray-50">
                             <td class="px-6 py-4 align-top">Frontend y Voz</td>
                             <td class="px-6 py-4 font-semibold">Aplicación Móvil</td>
-                            <td class="px-6 py-4"><span class="tech-option bg-blue-100 text-blue-800">Flutter (Dart)</span><span class="tech-option bg-green-100 text-green-800">Jetpack Compose</span></td>
+                            <td class="px-6 py-4"><span class="tech-option bg-blue-100 text-blue-800">Flutter (Dart)</span></td>
                             <td class="px-6 py-4">Desarrollo de la app móvil accesible, con interfaz optimizada para comandos por voz.</td>
-                            <td class="px-6 py-4"><b>Flutter:</b> Framework moderno y multiplataforma. <br><b>Jetpack Compose:</b> Moderno kit de herramientas de UI declarativo para desarrollo nativo en Android.</td>
+                            <td class="px-6 py-4">Framework moderno y multiplataforma que permite un desarrollo rápido y consistente para Android e iOS.</td>
                         </tr>
                         <tr class="bg-white border-b hover:bg-gray-50">
                             <td class="px-6 py-4 align-top">Frontend y Voz</td>
@@ -111,9 +111,9 @@
                          <tr class="bg-white border-b hover:bg-gray-50">
                             <td class="px-6 py-4 align-top">Backend & IA</td>
                             <td class="px-6 py-4 font-semibold">Base de Datos</td>
-                            <td class="px-6 py-4"><span class="tech-option bg-indigo-100 text-indigo-800">Google Cloud SQL (PostgreSQL/MySQL)</span></td>
-                            <td class="px-6 py-4">Almacenamiento persistente, escalable y seguro para productos, usuarios e historial de pedidos.</td>
-                            <td class="px-6 py-4">Servicio gestionado que reduce la carga administrativa, con alta disponibilidad, backups y seguridad integrada.</td>
+                            <td class="px-6 py-4"><span class="tech-option bg-orange-100 text-orange-800">MySQL (Dockerized)</span></td>
+                            <td class="px-6 py-4">Almacenamiento persistente para el BackOffice (Django), dockerizado en la misma imagen.</td>
+                            <td class="px-6 py-4">Solución open-source robusta. Al estar dockerizada junto al BackOffice, se simplifica el despliegue y la gestión.</td>
                         </tr>
 
                         <!-- Infraestructura & DevOps -->
@@ -149,9 +149,16 @@
                         <tr class="bg-white border-b hover:bg-gray-50">
                             <td class="px-6 py-4 align-top">Infraestructura & DevOps</td>
                             <td class="px-6 py-4 font-semibold">Despliegue en la Nube</td>
-                            <td class="px-6 py-4"><span class="tech-option bg-indigo-100 text-indigo-800">Google Cloud Run</span></td>
-                            <td class="px-6 py-4">Servicio serverless para ejecutar contenedores en un entorno escalable y gestionado.</td>
-                            <td class="px-6 py-4">Modelo de pago por uso y escalado a cero. Ideal para empezar y crecer sin grandes costos fijos.</td>
+                            <td class="px-6 py-4"><span class="tech-option bg-red-100 text-red-800">Oracle Cloud Free Tier</span></td>
+                            <td class="px-6 py-4">Hosting de la infraestructura y servicios en un entorno de nube sin costo inicial.</td>
+                            <td class="px-6 py-4">Ofrece recursos "Always Free" suficientes para desplegar y operar la aplicación sin incurrir en costos, ideal para las etapas iniciales del proyecto.</td>
+                        </tr>
+                        <tr class="bg-white border-b hover:bg-gray-50">
+                            <td class="px-6 py-4 align-top">Infraestructura & DevOps</td>
+                            <td class="px-6 py-4 font-semibold">Gestión de APIs y Credenciales</td>
+                            <td class="px-6 py-4"><span class="tech-option bg-blue-200 text-blue-900">Google Cloud Console</span></td>
+                            <td class="px-6 py-4">Creación del proyecto, gestión de credenciales OAuth para n8n y activación de APIs (STT, TTS, Drive, Sheets).</td>
+                            <td class="px-6 py-4">Plataforma centralizada para administrar todos los servicios de Google Cloud, garantizando un control seguro y unificado del acceso a las APIs.</td>
                         </tr>
                          <tr class="bg-white border-b hover:bg-gray-50">
                             <td class="px-6 py-4 align-top">Infraestructura & DevOps</td>
