--- a/stack2.html
+++ b/stack2.html
@@ -73,16 +73,16 @@
                         <tr class="bg-white border-b hover:bg-gray-50">
                             <td class="px-6 py-4 align-top">Frontend y Voz</td>
                             <td class="px-6 py-4 font-semibold">Reconocimiento de Voz (STT)</td>
-                            <td class="px-6 py-4"><span class="tech-option bg-yellow-100 text-yellow-800">Google Cloud Speech API</span><span class="tech-option bg-gray-200 text-gray-800">Android Speech API</span></td>
+                            <td class="px-6 py-4"><span class="tech-option bg-yellow-100 text-yellow-800">Google Cloud Speech API</span>
                             <td class="px-6 py-4">Conversión de la voz del usuario a texto para ser procesado por el NLU.</td>
-                            <td class="px-6 py-4"><b>Google Cloud:</b> Máximo control de privacidad (opción de pago).<br><b>Android API:</b> Integración nativa sin costos, pero con menor control de datos.</td>
+                            <td class="px-6 py-4"><b>Google Cloud:</b> Máximo control de privacidad (opción de pago)
                         </tr>
                         <tr class="bg-white border-b hover:bg-gray-50">
                             <td class="px-6 py-4 align-top">Frontend y Voz</td>
                             <td class="px-6 py-4 font-semibold">Síntesis de Voz (TTS)</td>
-                             <td class="px-6 py-4"><span class="tech-option bg-yellow-100 text-yellow-800">Android Text-to-Speech API</span><span class="tech-option bg-gray-200 text-gray-800">Google Cloud TTS API</span></td>
+                             <td class="px-6 py-4"><span class="tech-option bg-gray-200 text-gray-800">Google Cloud TTS API</span></td>
                             <td class="px-6 py-4">Proporciona las respuestas del asistente de forma audible y clara para el usuario.</td>
-                            <td class="px-6 py-4"><b>Android API:</b> Solución robusta y nativa sin costo.<br><b>Google Cloud:</b> Ofrece voces más naturales y opciones avanzadas (opción de pago).</td>
+                            <td class="px-6 py-4"><b>Google Cloud:</b> Ofrece voces más naturales y opciones avanzadas (opción de pago).</td>
                         </tr>
 
                         <!-- Backend & IA -->
@@ -205,3 +205,4 @@
     </div>
 </body>
 </html>
+
